--- a/.github/workflows/version_check.yml
+++ b/.github/workflows/version_check.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Read New Version
         id: read_new_version
         run: |
-          NEW_VERSION=$(grep -oP 'var Version = "\K[^\"]+' version/version.go)
+          NEW_VERSION=$(grep -E '^version = "[^"]+"' pyproject.toml | sed 's/version = "//; s/"//')
           echo "New version found: $NEW_VERSION"
           echo "::set-output name=VERSION::$NEW_VERSION"
 
@@ -27,14 +27,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            version
+            pyproject.toml
           ref: main
 
       # Step 4: Extract Existing Version from Main branch
       - name: Read Existing Version from Main
         id: read_existing_version
         run: |
-          EXISTING_VERSION=$(grep -oP 'var Version = "\K[^\"]+' version/version.go)
+          EXISTING_VERSION=$(grep -E '^version = "[^"]+"' pyproject.toml | sed 's/version = "//; s/"//')
           echo "Existing version on main: $EXISTING_VERSION"
           echo "::set-output name=EXISTING_VERSION::$EXISTING_VERSION"
 
